--- a/css/ratings_over_n.css
+++ b/css/ratings_over_n.css
@@ -4,7 +4,8 @@ body {
 }
 
 #vis {
-  width: 800px;
+  width: 1000px;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
 }
@@ -27,7 +28,7 @@ body {
 .avg-val {
   font-size: 10px;
   font-weight: bold;
-  color: red;
+  fill: red;
 }
 
 .mvavg {
@@ -39,12 +40,45 @@ body {
   /* fill is random */
   stroke: white;
 }
+.bar:hover {
+  fill: white;
+  stroke: black;
+}
 
 div.small-multiple {
   display: inline-block;
   background-color: #EEE;
+  border: 1px solid red;
   margin: 10px;
 }
 
 .name-label {
+  font-weight: bold;
+  fill: red;
+}
+
+.n-ct {
+  fill: black;
+  stroke: none;
+}
+
+.small-multiple-container,
+.meta {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.meta-label {
+  font-weight: bold;
+  size: 13px;
+  fill: red;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.meta-dot {
+  opacity: 0.9;
 }
