--- a/css/ratings_over_n.css
+++ b/css/ratings_over_n.css
@@ -4,7 +4,7 @@ body {
 }
 
 #vis, #header-container {
-  width: 900px;
+  width: 800px;
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
@@ -27,6 +27,11 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+#header h2 {
+  color: red;
+}
+
 .emph {
   font-weight: bold;
 }
